# lit-wsl

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  test_buffer_leniency.py  update_tests.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  config.yml
.github/workflows/: build.yaml  copier.yaml  docs.yaml  release.yaml
docs/: mkdocs.yml
docs/docs/: lenient_buffer_matching_guide.md  weight_mapper.md  weight_mapper_complete.md
notebooks/: weight_mapper_demos.ipynb  weight_mapper_example.ipynb
scripts/: update_tests_to_new_api.py
src/lit_wsl/: __init__.py  cli.py
src/lit_wsl/callbacks/: gpu_monitoring.py
src/lit_wsl/data/: datamodule.py  dummy.py
src/lit_wsl/mapper/: hierarchy_analyzer.py  mapping_strategy.py  module_node.py  parameter_extractor.py  parameter_group.py  parameter_info.py  result_types.py  rich_visualizer.py  similarity_scorer.py  weight_mapper.py
src/lit_wsl/models/: checkpoint.py  intermediate_layer_getter.py  weight_mapper.py  weight_renamer.py
src/lit_wsl/testing/: lightning_tester.py
src/lit_wsl/training/: stages.py
src/lit_wsl/utils/: logger.py
tests/integration/: test_boring_model.py  test_real_models.py
tests/unit/: test_base.py
tests/unit/data/: test_dummy.py
tests/unit/mapper/: conftest.py  test_hierarchy_analyzer.py  test_incompatible_pairs_integration.py  test_rich_visualizer.py  test_weight_mapper.py  test_weight_mapper_complex.py  test_weight_mapping_workflow.py
tests/unit/models/: conftest.py  test_checkpoint.py  test_weight_mapper.py  test_weight_mapping_workflow.py  test_weight_renamer.py
